--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,30 @@
     <string name="yes">YES</string>
     <string name="no">NO</string>
     <string name="branches_title">Branches</string>
+    <string name="add_branch_title">Add a Branch</string>
+    <string name="have_a_new_branch_q">Have a new branch? What are you waiting for? Add it now.</string>
+    <string name="hint_branch_name">Branch Name</string>
+    <string name="hint_location">Location</string>
+    <string name="edit_branch_title">Edit Branch</string>
+    <string name="have_an_update_in_branch_q">Have an update in your branch? let us know!</string>
+    <string name="add_now">Add now</string>
+    <string name="update_now">Save</string>
+    <string name="branch">Branch</string>
+    <string name="ends_on">Ends on</string>
+    <string name="missing_item">Couldn\'t find the Item</string>
+    <string name="to">to</string>
+    <string name="profile">Profile</string>
+    <string name="business_dashboard">Business Dashboard</string>
+    <string name="account_settings">Account Settings</string>
+    <string name="about_us">About us</string>
+    <string name="about_travisit_business">About Travisit Business</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="share_app">Tell others about Travisit Business</string>
+    <string name="rate_app">Rate us on Play Store</string>
+    <string name="branches">Branches</string>
+    <string name="change_logo"><u>Change Logo</u></string>
+    <string name="save_option">Save</string>
+    <string name="cancel_option">Cancel</string>
+    <string name="edit_option">Edit</string>
+    <string name="delete_options">Delete</string>
 </resources>
